--- a/quejapp/app/src/main/res/layout/activity_main.xml
+++ b/quejapp/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,17 @@
     tools:context="com.projectbelatrix.quejapp.MainActivity">
 
     <TextView
+        android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/text1"
+        android:gravity="center_horizontal|center_vertical"/>
+    <Button
+        android:id="@+id/button1"
+        android:text="@string/button1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/text1"
+        android:onClick="launchTabgActivity"/>
+
 </RelativeLayout>
